# Vectorization-of-noisy-parallelograms

./: .gitignore  CMakeLists.txt  MSD.cpp  SKO.cpp  Vectorization_OpenCV.cpp  Vectorization_OpenCV.sln  Vectorization_OpenCV.vcxproj  Vectorization_OpenCV.vcxproj.filters  main.cpp  test
Materials/: 0.txt  10_06.txt  10_09.txt  10_5.txt  4.txt  5.txt  full.txt  result.txt
example/: CMakeLists.txt  main.cpp
example/resources/: 10.txt  10_1_5.txt  10_7.txt  10_8.txt  4.txt  5.txt
include/: LinesDetection.h  MSD.h  Vectorization_parallelograms.h  debug.h
include/opencv2/: cvconfig.h
scr/: MSD.cpp  Vectorization_OpenCV.cpp  main.cpp
src/: MSD.cpp  Vectorization_OpenCV.cpp  Vectorization_parallelograms.cpp  debug.h  main.cpp
src/main/: LinesDetection.cpp  LinesDetection.h  MSD.cpp  MSD.h  Structures.cpp  Structures.h  Vectorization_OpenCV.cpp  Vectorization_parallelograms.cpp  Vectorization_parallelograms.h  debug.h  main.cpp
src/resources/: 10_6.txt  10_9.txt
x64/Debug/: Vectorization_OpenCV.ilk  Vectorization_OpenCV.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/Vectoriz.90D11F3E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vectorization_OpenCV.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
